swagger dodat